--- a/debian/control
+++ b/debian/control
@@ -118,11 +118,11 @@ Package: multiarch-support
 Architecture: any
 Multi-Arch: foreign
 Depends: ${misc:Depends},
-	 libc6 (>= 2.3.6-2) [!any-i386 !alpha !ia64 !hurd-any !kfreebsd-any],
+	 libc6 (>= 2.3.6-2) [!any-i386 !alpha !armhf !ia64 !hurd-any !kfreebsd-any],
          libc6.1 (>= 2.3.6-2) [alpha ia64],
          libc0.3 (>= 2.3.6-2) [!linux-any !kfreebsd-any !hurd-i386],
          libc0.1 (>= 2.3.6-2) [!linux-any !hurd-any !kfreebsd-i386],
-         libc6 (>= 2.13-5) [i386],
+         libc6 (>= 2.13-5) [armhf i386],
          libc0.3 (>= 2.13-5) [hurd-i386],
          libc0.1 (>= 2.13-5) [kfreebsd-i386],
 Priority: standard
@@ -141,7 +141,7 @@ Recommends: libc6-i686 [i386], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-
 Suggests: glibc-doc, debconf | debconf-2.0, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}, libc6-sparcv9b [sparc sparc64]
 Conflicts: tzdata-etch, tzdata (<< 2007k-1), prelink (<= 0.0.20090311-1)
-Breaks: nscd (<< 2.13), locales (<< 2.13), locales-all (<< 2.13), perl (<< 5.12.4-2)
+Breaks: nscd (<< 2.13), locales (<< 2.13), locales-all (<< 2.13), perl (<< 5.12.4-2), lsb-core (<= 3.2-27) [amd64 ppc64 s390x sparc64]
 Replaces: libc6-amd64 [amd64], 
           libc6-i386 [i386],
           libc0.1-i386 [kfreebsd-i386],
@@ -227,7 +227,7 @@ Recommends: libc6-i686 [i386], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-
 Suggests: glibc-doc, debconf | debconf-2.0, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}, libc6-sparcv9b [sparc sparc64]
 Conflicts: tzdata-etch, tzdata (<< 2007k-1), prelink (<= 0.0.20090311-1)
-Breaks: nscd (<< 2.13), locales (<< 2.13), locales-all (<< 2.13), perl (<< 5.12.4-2)
+Breaks: nscd (<< 2.13), locales (<< 2.13), locales-all (<< 2.13), perl (<< 5.12.4-2), lsb-core (<= 3.2-27) [amd64 ppc64 s390x sparc64]
 Replaces: libc6-amd64 [amd64], 
           libc6-i386 [i386],
           libc0.1-i386 [kfreebsd-i386],
@@ -313,7 +313,7 @@ Recommends: libc6-i686 [i386], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-
 Suggests: glibc-doc, debconf | debconf-2.0, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}, libc6-sparcv9b [sparc sparc64]
 Conflicts: tzdata-etch, tzdata (<< 2007k-1), prelink (<= 0.0.20090311-1)
-Breaks: nscd (<< 2.13), locales (<< 2.13), locales-all (<< 2.13), perl (<< 5.12.4-2)
+Breaks: nscd (<< 2.13), locales (<< 2.13), locales-all (<< 2.13), perl (<< 5.12.4-2), lsb-core (<= 3.2-27) [amd64 ppc64 s390x sparc64]
 Replaces: libc6-amd64 [amd64], 
           libc6-i386 [i386],
           libc0.1-i386 [kfreebsd-i386],
@@ -399,7 +399,7 @@ Recommends: libc6-i686 [i386], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-
 Suggests: glibc-doc, debconf | debconf-2.0, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}, libc6-sparcv9b [sparc sparc64]
 Conflicts: tzdata-etch, tzdata (<< 2007k-1), prelink (<= 0.0.20090311-1)
-Breaks: nscd (<< 2.13), locales (<< 2.13), locales-all (<< 2.13), perl (<< 5.12.4-2)
+Breaks: nscd (<< 2.13), locales (<< 2.13), locales-all (<< 2.13), perl (<< 5.12.4-2), lsb-core (<= 3.2-27) [amd64 ppc64 s390x sparc64]
 Replaces: libc6-amd64 [amd64], 
           libc6-i386 [i386],
           libc0.1-i386 [kfreebsd-i386],
