--- a/debian/control
+++ b/debian/control
@@ -141,7 +141,7 @@ Recommends: libc6-i686 [i386], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-
 Suggests: glibc-doc, debconf | debconf-2.0, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}, libc6-sparcv9b [sparc sparc64]
 Conflicts: tzdata-etch, tzdata (<< 2007k-1), prelink (<= 0.0.20090311-1)
-Breaks: nscd (<< 2.13), locales (<< 2.13), locales-all (<< 2.13), perl (<< 5.12.4-2), lsb-core (<= 3.2-27) [amd64 ppc64 s390x sparc64]
+Breaks: nscd (<< 2.13), locales (<< 2.13), locales-all (<< 2.13), perl (<< 5.12.4-2), lsb-core (<= 3.2-27) [amd64 ppc64 sparc64]
 Replaces: libc6-amd64 [amd64], 
           libc6-i386 [i386],
           libc0.1-i386 [kfreebsd-i386],
@@ -227,7 +227,7 @@ Recommends: libc6-i686 [i386], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-
 Suggests: glibc-doc, debconf | debconf-2.0, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}, libc6-sparcv9b [sparc sparc64]
 Conflicts: tzdata-etch, tzdata (<< 2007k-1), prelink (<= 0.0.20090311-1)
-Breaks: nscd (<< 2.13), locales (<< 2.13), locales-all (<< 2.13), perl (<< 5.12.4-2), lsb-core (<= 3.2-27) [amd64 ppc64 s390x sparc64]
+Breaks: nscd (<< 2.13), locales (<< 2.13), locales-all (<< 2.13), perl (<< 5.12.4-2), lsb-core (<= 3.2-27) [amd64 ppc64 sparc64]
 Replaces: libc6-amd64 [amd64], 
           libc6-i386 [i386],
           libc0.1-i386 [kfreebsd-i386],
@@ -313,7 +313,7 @@ Recommends: libc6-i686 [i386], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-
 Suggests: glibc-doc, debconf | debconf-2.0, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}, libc6-sparcv9b [sparc sparc64]
 Conflicts: tzdata-etch, tzdata (<< 2007k-1), prelink (<= 0.0.20090311-1)
-Breaks: nscd (<< 2.13), locales (<< 2.13), locales-all (<< 2.13), perl (<< 5.12.4-2), lsb-core (<= 3.2-27) [amd64 ppc64 s390x sparc64]
+Breaks: nscd (<< 2.13), locales (<< 2.13), locales-all (<< 2.13), perl (<< 5.12.4-2), lsb-core (<= 3.2-27) [amd64 ppc64 sparc64]
 Replaces: libc6-amd64 [amd64], 
           libc6-i386 [i386],
           libc0.1-i386 [kfreebsd-i386],
@@ -399,7 +399,7 @@ Recommends: libc6-i686 [i386], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-
 Suggests: glibc-doc, debconf | debconf-2.0, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}, libc6-sparcv9b [sparc sparc64]
 Conflicts: tzdata-etch, tzdata (<< 2007k-1), prelink (<= 0.0.20090311-1)
-Breaks: nscd (<< 2.13), locales (<< 2.13), locales-all (<< 2.13), perl (<< 5.12.4-2), lsb-core (<= 3.2-27) [amd64 ppc64 s390x sparc64]
+Breaks: nscd (<< 2.13), locales (<< 2.13), locales-all (<< 2.13), perl (<< 5.12.4-2), lsb-core (<= 3.2-27) [amd64 ppc64 sparc64]
 Replaces: libc6-amd64 [amd64], 
           libc6-i386 [i386],
           libc0.1-i386 [kfreebsd-i386],
