--- a/debian/rules
+++ b/debian/rules
@@ -127,9 +127,14 @@ log_expected = debian/testsuite-checking/expected-results-$(call xx,configure_ta
 # Which build pass are we on?
 curpass = $(filter-out %_,$(subst _,_ ,$@))
 
-DEB_ARCH_REGULAR_PACKAGES = $(libc) $(libc)-dev $(libc)-dbg $(libc)-prof $(libc)-pic libc-bin libc-dev-bin locales-all multiarch-support
+DEB_ARCH_REGULAR_PACKAGES = $(libc) $(libc)-dev $(libc)-dbg $(libc)-prof $(libc)-pic libc-bin libc-dev-bin multiarch-support
 DEB_INDEP_REGULAR_PACKAGES = glibc-doc eglibc-source locales
 DEB_UDEB_PACKAGES = $(libc)-udeb libnss-dns-udeb libnss-files-udeb
+
+## Locales can only be pre-generated during native compiles
+ifeq ($(DEB_HOST_ARCH),$(DEB_BUILD_ARCH))
+DEB_ARCH_REGULAR_PACKAGES += locales-all
+endif
 
 # Generic kernel version check
 define kernel_check
