--- a/debian/rules
+++ b/debian/rules
@@ -154,6 +154,9 @@ standard-add-ons = libidn,
 
 # Don't run dh_strip on this package
 NOSTRIP_$(libc)-dbg = 1
+NOSTRIP_libc-bin = 1
+NOSTRIP_libc-dev-bin = 1
+NOSTRIP_nscd = 1
 
 ifeq ($(threads),yes)
 DEB_ARCH_REGULAR_PACKAGES += nscd
