Fix previous commit
svn path=/glibc-package/trunk/; revision=5107

--- a/debian/rules
+++ b/debian/rules
@@ -154,6 +154,8 @@ standard-add-ons = libidn,
 
 # Don't run dh_strip on this package
 NOSTRIP_$(libc)-dbg = 1
+
+# Don't put debug files from these packages in libc-dbg
 NODEBUG_libc-bin = 1
 NODEBUG_libc-dev-bin = 1
 NODEBUG_nscd = 1
