--- a/debian/control
+++ b/debian/control
@@ -3,9 +3,9 @@ Section: libs
 Priority: required
 Build-Depends: gettext, make (>= 3.80), dpkg-dev (>= 1.16.0), bzip2, xz-utils, file, quilt,
  autoconf, sed (>= 4.0.5-4), gawk, debhelper (>= 7.4.3), tar (>= 1.22), fdupes,
- linux-libc-dev (>= 3.2.1-1) [!hurd-i386 !kfreebsd-i386 !kfreebsd-amd64]
+ linux-libc-dev (>= 3.2.1-1) [linux-any],
  mig (>= 1.3-2) [hurd-i386], hurd-dev (>= 20080607-3) [hurd-i386], gnumach-dev [hurd-i386], libpthread-stubs0-dev [hurd-i386],
- kfreebsd-kernel-headers [kfreebsd-i386 kfreebsd-amd64],
+ kfreebsd-kernel-headers [kfreebsd-any],
  binutils (>= 2.20-3), binutils (>= 2.21) [sparc sparc64],
  g++-4.4 (>= 4.4.2-2) [!armhf], g++-4.6 [armhf], g++-4.4-multilib [amd64 i386 kfreebsd-amd64 mips mipsel powerpc ppc64 s390 s390x sparc]
 Build-Depends-Indep: perl, po-debconf (>= 1.0)
