* debian/control.in/main: set glibc-doc as Multiarch: foreign.     Closes: #674645.
svn path=/glibc-package/trunk/; revision=5259

--- a/debian/control
+++ b/debian/control
@@ -53,6 +53,7 @@ Package: glibc-doc
 Architecture: all
 Section: doc
 Priority: optional
+Multi-Arch: foreign
 Depends: ${misc:Depends}
 Suggests: glibc-doc-reference
 Description: Embedded GNU C Library: Documentation
@@ -61,9 +62,9 @@ Description: Embedded GNU C Library: Documentation
  glibc-doc-reference for licensing reasons.
 
 Package: eglibc-source
-Architecture: all
 Section: devel
 Priority: optional
+Multi-Arch: foreign
 Depends: ${misc:Depends}
 Recommends: xz-utils
 Description: Embedded GNU C Library: sources
