--- a/debian/control
+++ b/debian/control
@@ -62,6 +62,7 @@ Description: Embedded GNU C Library: Documentation
  glibc-doc-reference for licensing reasons.
 
 Package: eglibc-source
+Architecture: all
 Section: devel
 Priority: optional
 Multi-Arch: foreign
