--- a/debian/control
+++ b/debian/control
@@ -134,7 +134,7 @@ Description: Transitional package to ensure multiarch compatibility
  be removed once nothing on the system depends on it.
 
 Package: libc6
-Architecture: amd64 arm armeb armel armhf i386 m32r m68k mips mipsel powerpc powerpcspe ppc64 sparc sparc64 s390 s390x hppa sh3 sh4 sh3eb sh4eb
+Architecture: amd64 arm armel armhf hppa i386 m32r m68k mips mipsel powerpc powerpcspe ppc64 sparc sparc64 s390 s390x sh4
 Section: libs
 Priority: required
 Multi-Arch: same
@@ -158,21 +158,23 @@ Description: Embedded GNU C Library: Shared libraries
  and the standard math library, as well as many others.
 
 Package: libc6-dev
-Architecture: amd64 arm armeb armel armhf i386 m32r m68k mips mipsel powerpc powerpcspe ppc64 sparc sparc64 s390 s390x hppa sh3 sh4 sh3eb sh4eb
+Architecture: amd64 arm armel armhf hppa i386 m32r m68k mips mipsel powerpc powerpcspe ppc64 sparc sparc64 s390 s390x sh4
 Section: libdevel
 Priority: optional
+Multi-Arch: same
 Depends: libc6 (= ${binary:Version}), libc-dev-bin (= ${binary:Version}), ${misc:Depends}, linux-libc-dev [linux-any], kfreebsd-kernel-headers (>= 0.11) [kfreebsd-any], gnumach-dev [hurd-i386], hurd-dev (>= 20080607-3) [hurd-i386]
 Replaces: hurd-dev (<< 20120408-3) [hurd-i386]
 Recommends: gcc | c-compiler
 Suggests: glibc-doc, manpages-dev
 Provides: libc-dev, libc6-dev [alpha ia64 hurd-i386 kfreebsd-i386 kfreebsd-amd64]
 Breaks: binutils (<< 2.20.1-1), binutils-gold (<< 2.20.1-11), cmake (<< 2.8.4+dfsg.1-5), gcc-4.4 (<< 4.4.6-4), gcc-4.5 (<< 4.5.3-2), gcc-4.6 (<< 4.6.0-12), make (<< 3.81-8.1), pkg-config (<< 0.26-1), libjna-java (<< 3.2.7-4), liblouis-dev (<< 2.3.0-2), liblouisxml-dev (<< 2.4.0-2), libhwloc-dev (<< 1.2-3)
+Conflicts: libc6.1-dev libc0.1-dev libc0.3-dev
 Description: Embedded GNU C Library: Development Libraries and Header Files
  Contains the symlinks, headers, and object files needed to compile
  and link programs which use the standard C library.
 
 Package: libc6-dbg
-Architecture: amd64 arm armeb armel armhf i386 m32r m68k mips mipsel powerpc powerpcspe ppc64 sparc sparc64 s390 s390x hppa sh3 sh4 sh3eb sh4eb
+Architecture: amd64 arm armel armhf hppa i386 m32r m68k mips mipsel powerpc powerpcspe ppc64 sparc sparc64 s390 s390x sh4
 Section: debug
 Priority: extra
 Multi-Arch: same
@@ -183,7 +185,7 @@ Description: Embedded GNU C Library: detached debugging symbols
  library.
 
 Package: libc6-prof
-Architecture: amd64 arm armeb armel armhf i386 m32r m68k mips mipsel powerpc powerpcspe ppc64 sparc sparc64 s390 s390x hppa sh3 sh4 sh3eb sh4eb
+Architecture: amd64 arm armel armhf hppa i386 m32r m68k mips mipsel powerpc powerpcspe ppc64 sparc sparc64 s390 s390x sh4
 Section: libdevel
 Priority: extra
 Multi-Arch: same
@@ -193,7 +195,7 @@ Description: Embedded GNU C Library: Profiling Libraries
  with gprof.
 
 Package: libc6-pic
-Architecture: amd64 arm armeb armel armhf i386 m32r m68k mips mipsel powerpc powerpcspe ppc64 sparc sparc64 s390 s390x hppa sh3 sh4 sh3eb sh4eb
+Architecture: amd64 arm armel armhf hppa i386 m32r m68k mips mipsel powerpc powerpcspe ppc64 sparc sparc64 s390 s390x sh4
 Section: libdevel
 Priority: optional
 Multi-Arch: same
@@ -208,7 +210,7 @@ Description: Embedded GNU C Library: PIC archive library
 
 Package: libc6-udeb
 XC-Package-Type: udeb
-Architecture: amd64 arm armeb armel armhf i386 m32r m68k mips mipsel powerpc powerpcspe ppc64 sparc sparc64 s390 s390x hppa sh3 sh4 sh3eb sh4eb
+Architecture: amd64 arm armel armhf hppa i386 m32r m68k mips mipsel powerpc powerpcspe ppc64 sparc sparc64 s390 s390x sh4
 Section: debian-installer
 Priority: extra
 Provides: libc6, libc-udeb, ${locale-compat:Depends}
@@ -248,12 +250,14 @@ Package: libc6.1-dev
 Architecture: alpha ia64
 Section: libdevel
 Priority: optional
+Multi-Arch: same
 Depends: libc6.1 (= ${binary:Version}), libc-dev-bin (= ${binary:Version}), ${misc:Depends}, linux-libc-dev [linux-any], kfreebsd-kernel-headers (>= 0.11) [kfreebsd-any], gnumach-dev [hurd-i386], hurd-dev (>= 20080607-3) [hurd-i386]
 Replaces: hurd-dev (<< 20120408-3) [hurd-i386]
 Recommends: gcc | c-compiler
 Suggests: glibc-doc, manpages-dev
 Provides: libc-dev, libc6-dev [alpha ia64 hurd-i386 kfreebsd-i386 kfreebsd-amd64]
 Breaks: binutils (<< 2.20.1-1), binutils-gold (<< 2.20.1-11), cmake (<< 2.8.4+dfsg.1-5), gcc-4.4 (<< 4.4.6-4), gcc-4.5 (<< 4.5.3-2), gcc-4.6 (<< 4.6.0-12), make (<< 3.81-8.1), pkg-config (<< 0.26-1), libjna-java (<< 3.2.7-4), liblouis-dev (<< 2.3.0-2), liblouisxml-dev (<< 2.4.0-2), libhwloc-dev (<< 1.2-3)
+Conflicts: libc6-dev libc0.1-dev libc0.3-dev
 Description: Embedded GNU C Library: Development Libraries and Header Files
  Contains the symlinks, headers, and object files needed to compile
  and link programs which use the standard C library.
@@ -335,12 +339,14 @@ Package: libc0.3-dev
 Architecture: hurd-i386
 Section: libdevel
 Priority: optional
+Multi-Arch: same
 Depends: libc0.3 (= ${binary:Version}), libc-dev-bin (= ${binary:Version}), ${misc:Depends}, linux-libc-dev [linux-any], kfreebsd-kernel-headers (>= 0.11) [kfreebsd-any], gnumach-dev [hurd-i386], hurd-dev (>= 20080607-3) [hurd-i386]
 Replaces: hurd-dev (<< 20120408-3) [hurd-i386]
 Recommends: gcc | c-compiler
 Suggests: glibc-doc, manpages-dev
 Provides: libc-dev, libc6-dev [alpha ia64 hurd-i386 kfreebsd-i386 kfreebsd-amd64]
 Breaks: binutils (<< 2.20.1-1), binutils-gold (<< 2.20.1-11), cmake (<< 2.8.4+dfsg.1-5), gcc-4.4 (<< 4.4.6-4), gcc-4.5 (<< 4.5.3-2), gcc-4.6 (<< 4.6.0-12), make (<< 3.81-8.1), pkg-config (<< 0.26-1), libjna-java (<< 3.2.7-4), liblouis-dev (<< 2.3.0-2), liblouisxml-dev (<< 2.4.0-2), libhwloc-dev (<< 1.2-3)
+Conflicts: libc6-dev libc6.1-dev libc0.1-dev
 Description: Embedded GNU C Library: Development Libraries and Header Files
  Contains the symlinks, headers, and object files needed to compile
  and link programs which use the standard C library.
@@ -395,7 +401,7 @@ Description: Embedded GNU C Library: Shared libraries - udeb
  installer.  Do not install it on a normal system.
 
 Package: libc0.1
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-amd64 kfreebsd-i386
 Section: libs
 Priority: required
 Multi-Arch: same
@@ -419,21 +425,23 @@ Description: Embedded GNU C Library: Shared libraries
  and the standard math library, as well as many others.
 
 Package: libc0.1-dev
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-amd64 kfreebsd-i386
 Section: libdevel
 Priority: optional
+Multi-Arch: same
 Depends: libc0.1 (= ${binary:Version}), libc-dev-bin (= ${binary:Version}), ${misc:Depends}, linux-libc-dev [linux-any], kfreebsd-kernel-headers (>= 0.11) [kfreebsd-any], gnumach-dev [hurd-i386], hurd-dev (>= 20080607-3) [hurd-i386]
 Replaces: hurd-dev (<< 20120408-3) [hurd-i386]
 Recommends: gcc | c-compiler
 Suggests: glibc-doc, manpages-dev
 Provides: libc-dev, libc6-dev [alpha ia64 hurd-i386 kfreebsd-i386 kfreebsd-amd64]
 Breaks: binutils (<< 2.20.1-1), binutils-gold (<< 2.20.1-11), cmake (<< 2.8.4+dfsg.1-5), gcc-4.4 (<< 4.4.6-4), gcc-4.5 (<< 4.5.3-2), gcc-4.6 (<< 4.6.0-12), make (<< 3.81-8.1), pkg-config (<< 0.26-1), libjna-java (<< 3.2.7-4), liblouis-dev (<< 2.3.0-2), liblouisxml-dev (<< 2.4.0-2), libhwloc-dev (<< 1.2-3)
+Conflicts: libc6-dev libc6.1-dev libc0.3-dev
 Description: Embedded GNU C Library: Development Libraries and Header Files
  Contains the symlinks, headers, and object files needed to compile
  and link programs which use the standard C library.
 
 Package: libc0.1-dbg
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-amd64 kfreebsd-i386
 Section: debug
 Priority: extra
 Multi-Arch: same
@@ -444,7 +452,7 @@ Description: Embedded GNU C Library: detached debugging symbols
  library.
 
 Package: libc0.1-prof
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-amd64 kfreebsd-i386
 Section: libdevel
 Priority: extra
 Multi-Arch: same
@@ -454,7 +462,7 @@ Description: Embedded GNU C Library: Profiling Libraries
  with gprof.
 
 Package: libc0.1-pic
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-amd64 kfreebsd-i386
 Section: libdevel
 Priority: optional
 Multi-Arch: same
@@ -469,7 +477,7 @@ Description: Embedded GNU C Library: PIC archive library
 
 Package: libc0.1-udeb
 XC-Package-Type: udeb
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-amd64 kfreebsd-i386
 Section: debian-installer
 Priority: extra
 Provides: libc0.1, libc-udeb, ${locale-compat:Depends}
