* control.in/main: switch multiarch-support to priority: required.  Closes:     #677624.
svn path=/glibc-package/trunk/; revision=5296

--- a/debian/control
+++ b/debian/control
@@ -127,7 +127,7 @@ Depends: ${misc:Depends},
          libc6 (>= 2.13-5) [armhf i386],
          libc0.3 (>= 2.13-5) [hurd-i386],
          libc0.1 (>= 2.13-5) [kfreebsd-i386],
-Priority: standard
+Priority: required
 Description: Transitional package to ensure multiarch compatibility
  This is a transitional package used to ensure multiarch support is present
  in ld.so before unpacking libraries to the multiarch directories.  It can
