Unset CFLAGS et al from the environment and use our own
svn path=/glibc-package/branches/eglibc-2.16/; revision=5335

--- a/debian/rules
+++ b/debian/rules
@@ -76,6 +76,13 @@ ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
 NJOBS := -j $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
 endif
 
+# use the package settings, not the settings from the environment
+define unsetenv
+  unexport $(1)
+  $(1) =
+endef
+$(foreach v, CPPFLAGS CFLAGS CXXFLAGS LDFLAGS, $(if $(filter environment,$(origin $(v))),$(eval $(call unsetenv, $(v)))))
+
 # Default setup
 EGLIBC_PASSES ?= libc
 
