--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Build-Depends: gettext, make (>= 3.80), dpkg-dev (>= 1.16.0), bzip2, xz-utils, f
  kfreebsd-kernel-headers [kfreebsd-any],
  binutils (>= 2.21),
  g++-4.6 [!arm64 !x32], g++-4.6-multilib [amd64 i386 kfreebsd-amd64 mips mipsel powerpc ppc64 s390 s390x sparc],
- g++-4.7 (>= 4.7.2-3) [arm64 x32], g++-4.7-multilib (>= 4.7.2-3) [x32]
+ g++-4.7 (>= 4.7.2-11) [amd64 arm64 i386 x32], g++-4.7-multilib (>= 4.7.2-11) [amd64 i386 x32]
 Build-Depends-Indep: perl, po-debconf (>= 1.0)
 Build-Conflicts: binutils-gold
 Maintainer: GNU Libc Maintainers <debian-glibc@lists.debian.org>
