debian/{tests,control.in/main}: Add simple autopkgtest rebuild testcase.
svn path=/glibc-package/branches/eglibc-2.16/; revision=5403

--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Standards-Version: 3.9.3
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-glibc/glibc-package/
 Vcs-Svn: svn://svn.debian.org/pkg-glibc/glibc-package/
 Homepage: http://www.eglibc.org
+XS-Testsuite: autopkgtest
 
 Package: libc-bin
 Architecture: any
