* debian/rules: don't force the GCC version for BUILD_CC and BUILD_CXX.
svn path=/glibc-package/branches/eglibc-2.16/; revision=5409

--- a/debian/rules
+++ b/debian/rules
@@ -112,8 +112,8 @@ RUN_TESTSUITE = yes
 # Set cross and native compiler names, including version
 CC     = $(DEB_HOST_GNU_TYPE)-$(BASE_CC)$(DEB_GCC_VERSION)
 CXX    = $(DEB_HOST_GNU_TYPE)-$(BASE_CXX)$(DEB_GCC_VERSION)
-BUILD_CC = $(DEB_BUILD_GNU_TYPE)-$(BASE_CC)$(DEB_GCC_VERSION)
-BUILD_CXX = $(DEB_BUILD_GNU_TYPE)-$(BASE_CXX)$(DEB_GCC_VERSION)
+BUILD_CC = $(DEB_BUILD_GNU_TYPE)-$(BASE_CC)
+BUILD_CXX = $(DEB_BUILD_GNU_TYPE)-$(BASE_CXX)
 
 BUILD_CFLAGS = -O2 -g
 HOST_CFLAGS = -pipe -O2 -fstrict-aliasing -g $(call xx,extra_cflags)
