--- a/debian/rules
+++ b/debian/rules
@@ -60,7 +60,7 @@ DEB_HOST_GNU_TYPE_ALT ?=
 DEB_SOURCE_PACKAGE := $(strip $(shell egrep '^Source: ' debian/control | cut -f 2 -d ':'))
 
 DEB_VERSION := $(shell dpkg-parsechangelog | egrep '^Version:' | cut -f 2 -d ' ')
-EGLIBC_VERSION = $(shell echo $(DEB_VERSION) | sed -e 's/-.*//')
+EGLIBC_VERSION = $(shell echo $(DEB_VERSION) | sed -e 's/.*://' -e 's/-.*//')
 
 DEB_BUILDDIR ?= $(build-tree)/$(DEB_HOST_ARCH)-$(curpass)
 
