debian/{rules,rules.d/control.mk,control.in/libc}: Allow turning off libc-prof arbitrarily, and disable it for arm64, which lacks support.
svn path=/glibc-package/branches/eglibc-2.17/; revision=5446

--- a/debian/control
+++ b/debian/control
@@ -189,7 +189,7 @@ Description: Embedded GNU C Library: detached debugging symbols
  library.
 
 Package: libc6-prof
-Architecture: amd64 arm arm64 armel armhf hppa i386 m68k mips mipsel powerpc powerpcspe ppc64 sparc sparc64 s390 s390x sh4 x32
+Architecture: amd64 arm armel armhf hppa i386 m68k mips mipsel powerpc powerpcspe ppc64 sparc sparc64 s390 s390x sh4 x32
 Section: libdevel
 Priority: extra
 Multi-Arch: same
