debian/rules: Don't put x32 debug symbols in libc-dbg (LP: #1106471)
svn path=/glibc-package/branches/eglibc-2.17/; revision=5470

--- a/debian/rules
+++ b/debian/rules
@@ -181,6 +181,7 @@ NODEBUG_libc-bin = 1
 NODEBUG_libc-dev-bin = 1
 NODEBUG_libc6-amd64 = 1
 NODEBUG_libc6-i386 = 1
+NODEBUG_libc6-x32 = 1
 NODEBUG_libc6-mipsn32 = 1
 NODEBUG_libc6-powerpc = 1
 NODEBUG_libc6-ppc64 = 1
