* debian/control.in/main: remove ${misc:Depends} from libc Depends: field to     not get a dependency on debconf.  Closes: #707813.
svn path=/glibc-package/trunk/; revision=5586

--- a/debian/control
+++ b/debian/control
@@ -141,7 +141,7 @@ Architecture: amd64 arm arm64 armel armhf hppa i386 m68k mips mipsel powerpc pow
 Section: libs
 Priority: required
 Multi-Arch: same
-Depends: ${shlibs:Depends}, ${misc:Depends}, libgcc1 [!hppa !m68k], libgcc2 [m68k], libgcc4 [hppa]
+Depends: ${shlibs:Depends}, libgcc1 [!hppa !m68k], libgcc2 [m68k], libgcc4 [hppa]
 Recommends: libc6-i686 [i386], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386] 
 Suggests: glibc-doc, debconf | debconf-2.0, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}, libc6-sparcv9b [sparc sparc64]
@@ -231,7 +231,7 @@ Architecture: alpha ia64
 Section: libs
 Priority: required
 Multi-Arch: same
-Depends: ${shlibs:Depends}, ${misc:Depends}, libgcc1 [!hppa !m68k], libgcc2 [m68k], libgcc4 [hppa]
+Depends: ${shlibs:Depends}, libgcc1 [!hppa !m68k], libgcc2 [m68k], libgcc4 [hppa]
 Recommends: libc6-i686 [i386], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386] 
 Suggests: glibc-doc, debconf | debconf-2.0, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}, libc6-sparcv9b [sparc sparc64]
@@ -321,7 +321,7 @@ Architecture: hurd-i386
 Section: libs
 Priority: required
 Multi-Arch: same
-Depends: ${shlibs:Depends}, ${misc:Depends}, libgcc1 [!hppa !m68k], libgcc2 [m68k], libgcc4 [hppa]
+Depends: ${shlibs:Depends}, libgcc1 [!hppa !m68k], libgcc2 [m68k], libgcc4 [hppa]
 Recommends: libc6-i686 [i386], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386] 
 Suggests: glibc-doc, debconf | debconf-2.0, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}, libc6-sparcv9b [sparc sparc64]
@@ -411,7 +411,7 @@ Architecture: kfreebsd-amd64 kfreebsd-i386
 Section: libs
 Priority: required
 Multi-Arch: same
-Depends: ${shlibs:Depends}, ${misc:Depends}, libgcc1 [!hppa !m68k], libgcc2 [m68k], libgcc4 [hppa]
+Depends: ${shlibs:Depends}, libgcc1 [!hppa !m68k], libgcc2 [m68k], libgcc4 [hppa]
 Recommends: libc6-i686 [i386], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386] 
 Suggests: glibc-doc, debconf | debconf-2.0, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}, libc6-sparcv9b [sparc sparc64]
