Add rpcinfo to libc-bin description.
svn path=/glibc-package/trunk/; revision=5604

--- a/debian/control
+++ b/debian/control
@@ -40,6 +40,7 @@ Description: Embedded GNU C Library: Binaries
   * ldd, ldconfig: print/configure shared library dependencies
   * locale, localedef: show/generate locale definitions
   * tzselect, zdump, zic: select/dump/compile time zones
+  * rpcinfo: report RPC information
 
 Package: libc-dev-bin
 Architecture: any
