--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Build-Depends: gettext, dpkg-dev (>= 1.16.0), bzip2, xz-utils, file, quilt,
  mig (>= 1.3-2) [hurd-i386], hurd-dev (>= 20120520-2~) [hurd-i386], gnumach-dev (>= 2:1.3.99.dfsg.git20120923~) [hurd-i386],
  kfreebsd-kernel-headers [kfreebsd-any],
  binutils (>= 2.21),
+ g++-4.4 [mips mipsel], g++-4.4-multilib [mips mipsel],
  g++-4.6 [ia64],
  g++-4.7 (>= 4.7.3-4) [kfreebsd-amd64],
  g++-4.7 (>= 4.7.2-11), g++-4.7-multilib [amd64 i386 kfreebsd-amd64 mips mipsel powerpc ppc64 s390 s390x sparc x32]
