* debian/rules: unexport LD_PRELOAD to allow the testsuite to pass even     if eatmydata is used.  Closes: #713035.
svn path=/glibc-package/trunk/; revision=5637

--- a/debian/rules
+++ b/debian/rules
@@ -40,7 +40,7 @@ shlib_dep = $(libc) (>= $(shlib_dep_ver))
 include debian/locales-depver
 
 # Beyond here you shouldn't need to customise anything:
-
+unexport LD_PRELOAD
 export SHELL          = /bin/bash -e
 
 DEB_HOST_ARCH         ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
