--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Build-Depends: gettext, dpkg-dev (>= 1.16.0), bzip2, xz-utils, file, quilt,
  g++-4.6 [ia64],
  g++-4.7 (>= 4.7.3-4) [kfreebsd-amd64],
  g++-4.8 [arm64 ppc64el],
- g++-4.7 (>= 4.7.2-11), g++-4.7-multilib [amd64 i386 kfreebsd-amd64 mips mipsel powerpc ppc64 s390 s390x sparc sparc64 x32]
+ g++-4.7 (>= 4.7.2-11), g++-4.7-multilib [amd64 i386 kfreebsd-amd64 mips mipsel powerpc ppc64 s390x sparc sparc64 x32]
 Build-Depends-Indep: perl, po-debconf (>= 1.0)
 Maintainer: GNU Libc Maintainers <debian-glibc@lists.debian.org>
 Uploaders: Clint Adams <clint@debian.org>, Aurelien Jarno <aurel32@debian.org>, Adam Conrad <adconrad@0c3.net>
@@ -138,7 +138,7 @@ Description: Transitional package to ensure multiarch compatibility
  be removed once nothing on the system depends on it.
 
 Package: libc6
-Architecture: amd64 arm arm64 armel armhf hppa i386 m68k mips mipsel powerpc powerpcspe ppc64 ppc64el sparc sparc64 s390 s390x sh4 x32
+Architecture: amd64 arm arm64 armel armhf hppa i386 m68k mips mipsel powerpc powerpcspe ppc64 ppc64el sparc sparc64 s390x sh4 x32
 Section: libs
 Priority: required
 Multi-Arch: same
@@ -163,7 +163,7 @@ Description: Embedded GNU C Library: Shared libraries
  and the standard math library, as well as many others.
 
 Package: libc6-dev
-Architecture: amd64 arm arm64 armel armhf hppa i386 m68k mips mipsel powerpc powerpcspe ppc64 ppc64el sparc sparc64 s390 s390x sh4 x32
+Architecture: amd64 arm arm64 armel armhf hppa i386 m68k mips mipsel powerpc powerpcspe ppc64 ppc64el sparc sparc64 s390x sh4 x32
 Section: libdevel
 Priority: optional
 Multi-Arch: same
@@ -179,7 +179,7 @@ Description: Embedded GNU C Library: Development Libraries and Header Files
  and link programs which use the standard C library.
 
 Package: libc6-dbg
-Architecture: amd64 arm arm64 armel armhf hppa i386 m68k mips mipsel powerpc powerpcspe ppc64 ppc64el sparc sparc64 s390 s390x sh4 x32
+Architecture: amd64 arm arm64 armel armhf hppa i386 m68k mips mipsel powerpc powerpcspe ppc64 ppc64el sparc sparc64 s390x sh4 x32
 Section: debug
 Priority: extra
 Multi-Arch: same
@@ -190,7 +190,7 @@ Description: Embedded GNU C Library: detached debugging symbols
  library.
 
 Package: libc6-prof
-Architecture: amd64 arm armel armhf hppa i386 m68k mips mipsel powerpc powerpcspe ppc64 ppc64el sparc sparc64 s390 s390x sh4 x32
+Architecture: amd64 arm armel armhf hppa i386 m68k mips mipsel powerpc powerpcspe ppc64 ppc64el sparc sparc64 s390x sh4 x32
 Section: libdevel
 Priority: extra
 Multi-Arch: same
@@ -200,7 +200,7 @@ Description: Embedded GNU C Library: Profiling Libraries
  with gprof.
 
 Package: libc6-pic
-Architecture: amd64 arm arm64 armel armhf hppa i386 m68k mips mipsel powerpc powerpcspe ppc64 ppc64el sparc sparc64 s390 s390x sh4 x32
+Architecture: amd64 arm arm64 armel armhf hppa i386 m68k mips mipsel powerpc powerpcspe ppc64 ppc64el sparc sparc64 s390x sh4 x32
 Section: libdevel
 Priority: optional
 Multi-Arch: same
@@ -215,7 +215,7 @@ Description: Embedded GNU C Library: PIC archive library
 
 Package: libc6-udeb
 XC-Package-Type: udeb
-Architecture: amd64 arm arm64 armel armhf hppa i386 m68k mips mipsel powerpc powerpcspe ppc64 ppc64el sparc sparc64 s390 s390x sh4 x32
+Architecture: amd64 arm arm64 armel armhf hppa i386 m68k mips mipsel powerpc powerpcspe ppc64 ppc64el sparc sparc64 s390x sh4 x32
 Section: debian-installer
 Priority: extra
 Provides: libc6, libc-udeb, ${locale-compat:Depends}
@@ -596,30 +596,6 @@ Description: Embedded GNU C Library: 32bit Development Libraries for IBM zSeries
  Contains the symlinks and object files needed to compile and link programs
  which use the standard C library. This is the 32bit version of the
  library.
-
-Package: libc6-s390x
-Architecture: s390
-Section: libs
-Priority: optional
-Depends: libc6 (= ${binary:Version}), ${misc:Depends}
-Description: Embedded GNU C Library: 64bit Shared libraries for IBM zSeries
- This package includes shared versions of the standard C library and the
- standard math library, as well as many others. This is the 64bit version
- of the library, meant for zSeries systems.
-
-Package: libc6-dev-s390x
-Architecture: s390
-Section: libdevel
-Priority: optional
-Provides: lib64c-dev
-Conflicts: libc6-dev (<< 2.13-14)
-Replaces: libc6-dev (<< 2.13-11)
-Depends: libc6-s390x (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
-Recommends: gcc-multilib
-Description: Embedded GNU C Library: 64bit Development Libraries for IBM zSeries
- Contains the symlinks and object files needed to compile and link programs
- which use the standard C library. This is the 64bit version of the
- library, meant for zSeries systems.
 
 Package: libc6-amd64
 Architecture: i386 x32
