* Remove linuxthreads from the tarball:     - rules.d/tarball.mk: don't fetech linuxthreads and linuxthreads_db.     - rules.d/build.mk: don't build linuxthreads manpages.     - rules: don't run make clean in linuxthreads directory.     - patches/any/local-sysctl.diff: drop the linuxthreads part.     - patches/all/local-pthread-manpages.diff: remove.     - local/manpages/pthread_*.3: import the few remaining linuxthreads       manpages.     - debhelper.in/glibc-doc.manpages: update manpage locations.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5804

--- a/debian/rules
+++ b/debian/rules
@@ -199,7 +199,6 @@ endif
 include debian/rules.d/*.mk
 
 clean:: unpatch
-	make -C $(CURDIR)/linuxthreads/man clean
 	rm -f $(CURDIR)/po/*.mo
 	rm -rf $(patsubst %,debian/tmp-%,$(EGLIBC_PASSES))
 	rm -rf $(build-tree)
@@ -214,7 +213,7 @@ build-arch: $(stamp)info \
 	$(patsubst %,$(stamp)build_%,$(EGLIBC_PASSES)) \
 	$(patsubst %,$(stamp)check_%,$(EGLIBC_PASSES))
 
-build-indep: $(stamp)source $(stamp)doc
+build-indep: $(stamp)source
 
 build: build-arch build-indep
 
