debian/rules: Build for i586 where dpkg-architecture claims i486, which matches the default that gcc-4.8 has had on i386 for the last two years.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5827

--- a/debian/rules
+++ b/debian/rules
@@ -117,7 +117,8 @@ BUILD_CXX = $(DEB_BUILD_GNU_TYPE)-$(BASE_CXX)
 BUILD_CFLAGS = -O2 -g
 HOST_CFLAGS = -pipe -O2 -fstrict-aliasing -g $(call xx,extra_cflags)
 
-configure_target := $(DEB_HOST_GNU_TYPE)
+# This subst can go away when dpkg-dev starts reporting i586 instead of i486
+configure_target := $(subst i486,i586,$(DEB_HOST_GNU_TYPE))
 
 # Normally we'll just use this for --build.  If the architecture requires
 # that build daemons be able to run a particular optimized library, then
