debian/{rules,sysdeps/arm64.mk,control}: Enable libc6-prof on aarch64.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5829

--- a/debian/rules
+++ b/debian/rules
@@ -135,7 +135,7 @@ log_expected = debian/testsuite-checking/expected-results-$(call xx,configure_ta
 curpass = $(filter-out %_,$(subst _,_ ,$@))
 
 # Some architectures don't get libc-profile ported right away:
-no_libc_profile := arm64
+no_libc_profile :=
 
 # Provide backward compatibility for the old DEB_STAGE for now
 ifeq ($(DEB_STAGE),stage1)
