debian/rules: Set configure_build the same as configure_target above, so we don't think we're cross-building and skip half the testsuite on i386.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5845

--- a/debian/rules
+++ b/debian/rules
@@ -124,7 +124,7 @@ configure_target := $(subst i486,i586,$(DEB_HOST_GNU_TYPE))
 # that build daemons be able to run a particular optimized library, then
 # they can set the --build to match --host for that optimized build.
 # Among other things this lets tests run.
-configure_build := $(DEB_BUILD_GNU_TYPE)
+configure_build := $(subst i486,i586,$(DEB_BUILD_GNU_TYPE))
 
 log_build    = $(build-tree)/log-build-$(call xx,configure_target)-$(curpass)
 log_test     = $(build-tree)/log-test-$(call xx,configure_target)-$(curpass)
