--- a/debian/rules
+++ b/debian/rules
@@ -165,7 +165,7 @@ define kernel_check
 fi)
 endef
 
-# Include libidn for both NPTL and LinuxThreads targets.
+# Include libidn for both NPTL and FBTL targets.
 standard-add-ons = libidn,
 
 # Pull in all the per-arch magic!
