* debian/rules: don't pass -fstrict-aliasing to HOST_CFLAGS, it is already     included in -O2.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5851

--- a/debian/rules
+++ b/debian/rules
@@ -115,7 +115,7 @@ BUILD_CC = $(DEB_BUILD_GNU_TYPE)-$(BASE_CC)
 BUILD_CXX = $(DEB_BUILD_GNU_TYPE)-$(BASE_CXX)
 
 BUILD_CFLAGS = -O2 -g
-HOST_CFLAGS = -pipe -O2 -fstrict-aliasing -g $(call xx,extra_cflags)
+HOST_CFLAGS = -pipe -O2 -g $(call xx,extra_cflags)
 
 # This subst can go away when dpkg-dev starts reporting i586 instead of i486
 configure_target := $(subst i486,i586,$(DEB_HOST_GNU_TYPE))
